--- a/gcn_word2vec.ipynb
+++ b/gcn_word2vec.ipynb
@@ -640,16 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.rand"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +722,7 @@
        "0.6098664104938507"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -772,29 +763,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>可能</td>\n",
-       "      <td>0.599476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>发问</td>\n",
-       "      <td>0.600341</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>表示</td>\n",
+       "      <th>146</th>\n",
+       "      <td>称</td>\n",
        "      <td>0.609866</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>希望</td>\n",
-       "      <td>0.614809</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>90</th>\n",
        "      <td>强调</td>\n",
-       "      <td>0.618524</td>\n",
+       "      <td>0.615942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>发问</td>\n",
+       "      <td>0.685405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>整合</td>\n",
+       "      <td>0.693429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>有</td>\n",
+       "      <td>0.694358</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -802,20 +793,20 @@
       ],
       "text/plain": [
        "    top_5_words    scores\n",
-       "63           可能  0.599476\n",
-       "35           发问  0.600341\n",
-       "97           表示  0.609866\n",
-       "104          希望  0.614809\n",
-       "90           强调  0.618524"
+       "146           称  0.609866\n",
+       "90           强调  0.615942\n",
+       "35           发问  0.685405\n",
+       "48           整合  0.693429\n",
+       "125           有  0.694358"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_top_similar_words(\"称\",gcn_embeddings)"
+    "get_top_similar_words(\"表示\",gcn_embeddings)"
    ]
   },
   {
