--- a/gcn_word2vec.ipynb
+++ b/gcn_word2vec.ipynb
@@ -407,11 +407,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gcn_layer(dad,inputs,dims=50):\n",
+    "def gcn_layer(dad,inputs,dims=len(G.nodes())):\n",
     "    \"\"\"\n",
     "    一个gcn层，提前算好的D*A*D（DAD）。\n",
     "    \"\"\"\n",
@@ -427,7 +427,8 @@
     "    adj = adj+np.eye(adj.shape[0])\n",
     "    dad = adj.dot(np.diag(np.power(adj.sum(1),-0.5))).T.dot(np.diag(np.power(adj.sum(1),-0.5)))\n",
     "    #inputs = np.ones((dad.shape[0],50))\n",
-    "    inputs = np.random.random((dad.shape[0],50))\n",
+    "    #inputs = np.random.random((dad.shape[0],50))\n",
+    "    inputs = np.diag(np.ones(len(G.nodes())))\n",
     "    for _ in range(n_gcn):\n",
     "        inputs = gcn_layer(dad,inputs)\n",
     "    return inputs\n",
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,16 +471,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5000000000000029"
+       "0.500000000000002"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -520,28 +521,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>没有</td>\n",
+       "      <th>76</th>\n",
+       "      <td>瑞士</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>默认</td>\n",
+       "      <th>140</th>\n",
+       "      <td>具有</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>马库斯</td>\n",
+       "      <th>139</th>\n",
+       "      <td>如何</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>同时</td>\n",
+       "      <th>75</th>\n",
+       "      <td>在</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>称</td>\n",
+       "      <th>40</th>\n",
+       "      <td>面临</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -550,20 +551,20 @@
       ],
       "text/plain": [
        "    top_5_words  scores\n",
-       "54           没有     0.5\n",
-       "83           默认     0.5\n",
-       "30          马库斯     0.5\n",
-       "88           同时     0.5\n",
-       "146           称     0.5"
+       "76           瑞士     0.5\n",
+       "140          具有     0.5\n",
+       "139          如何     0.5\n",
+       "75            在     0.5\n",
+       "40           面临     0.5"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_top_similar_words(\"表示\",gcn_embeddings,k=5)"
+    "get_top_similar_words(\"日内瓦\",gcn_embeddings,k=5)"
    ]
   },
   {
