--- a/gcn_word2vec.ipynb
+++ b/gcn_word2vec.ipynb
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# the words similarity are calculate with jacobian distance on the target word context, meaning words appear next two the target word."
+    "# the words similarity are calculated with jaccard index on the target word context, meaning words appear next to the target word."
    ]
   },
   {
@@ -2055,9 +2055,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DeepLearning[chatterbot_env]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "chatterbot_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2069,7 +2069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
